--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -1,23 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:padding="16dp">
 
     <Spinner
-        android:id="@+id/classSpinner"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <Spinner
-        android:id="@+id/daySpinner"
+        android:id="@+id/spinnerDaySchedule"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp" />
+        android:spinnerMode="dropdown" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/lessonRecyclerView"
+        android:id="@+id/recyclerViewSchedule"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingTop="8dp"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="12dp" />
 </LinearLayout>
